added orderFailed mail template

--- a/src/email/orderComplete.html
+++ b/src/email/orderComplete.html
@@ -155,7 +155,7 @@
                   <tbody>
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;padding-top:50px;padding-right:25px;padding-bottom:30px;padding-left:25px;word-break:break-word;">
-                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:40px;font-weight:bold;line-height:1;text-align:left;color:#262626;">Order Complete</div>
+                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:40px;font-weight:bold;line-height:1;text-align:left;color:#262626;">We've Received Your Order</div>
                       </td>
                     </tr>
                   </tbody>
@@ -179,11 +179,51 @@
                   <tbody>
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;padding-right:25px;padding-left:25px;word-break:break-word;">
-                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;">You have sucessfully placed an order for the following products <br /><br /> PRODUCTS: ${products}<br /><br /> your products will be delivered in 5 days</div>
+                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;">Hello, Thanks for shopping on Youstore! Please find a summary of your recent purchase below</div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#FFFFFF" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="background:#FFFFFF;background-color:#FFFFFF;margin:0px auto;max-width:600px;">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FFFFFF;background-color:#FFFFFF;width:100%;">
+        <tbody>
+          <tr>
+            <td style="direction:ltr;font-size:0px;padding:20px 0;padding-bottom:20px;padding-top:10px;text-align:center;">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                  <tbody>
+                    <tr>
+                      <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <table cellpadding="0" cellspacing="0" width="100%" border="0" style="color:#000000;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;table-layout:auto;width:100%;border:none;">
+                          <tr style="border-bottom:1px solid #ecedee;text-align:left;padding:15px 0;">
+                            <th style="padding: 0 15px 0 0;">Product Name</th>
+                            <th style="padding: 0 15px;">Quantity</th>
+                            <th style="padding: 0 0 0 15px;">Price</th>
+                          </tr>
+                          <tr>
+                            <td style="padding: 0 15px 0 0;">1995</td>
+                            <td style="padding: 0 15px;">PHP</td>
+                            <td style="padding: 0 0 0 15px;">C, Shell Unix</td>
+                          </tr>
+                        </table>
                       </td>
                     </tr>
                     <tr>
-                      <td align="left" style="font-size:0px;padding:10px 25px;padding-right:25px;padding-left:25px;word-break:break-word;">
+                      <td align="left" style="font-size:0px;padding:10px 25px;padding-top:25px;padding-right:25px;padding-left:25px;word-break:break-word;">
+                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;">It usually takes up to two business days to process and ship your order, you'll receive another mail from us once your order have been shipped. Your Order id is {{orderId}}</div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="left" style="font-size:0px;padding:10px 25px;padding-top:25px;padding-right:25px;padding-left:25px;word-break:break-word;">
                         <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;">Regards, <br /> The Youstore Team</div>
                       </td>
                     </tr>
